const mongoose = require('mongoose');
const httpStatus = require('http-status');
const APIError = require('../errors/api-error');

/**
* Languages
*/
const languages = ['cz', 'sk', 'en'];

/**
 * Article Schema
 * @private
 */
const articleSchema = new mongoose.Schema({
  userId: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'User',
    required: true,
    index: true,
  },
  title: {
    type: String,
    maxlength: 256,
    index: true,
    required: true,
  },
  text: {
    type: String,
    maxlength: 16448,
    index: true,
  },
  language: {
    type: String,
    enum: languages,
    default: 'cz',
  },
  comments: {
    type: Number,
    default: 0,
  },
  imageId: {
    type: mongoose.Schema.Types.ObjectId,
    ref: 'Image',
  },
}, {
  timestamps: true,
});

/**
 * Methods
 */
articleSchema.method({
  transform() {
    const transformed = {};
    const fields = ['_id', 'title', 'text', 'sourceUrl', 'language', 'comments', 'imageId', 'createdAt'];

    fields.forEach((field) => {
      transformed[field] = this[field];
    });

    // remove unwanted fields from populated User object
    const user = this.userId;
    const transformedUser = {};
    const userFields = ['_id', 'firstName', 'lastName', 'email'];

    if (this.userId) {
      userFields.forEach((field) => {
        transformedUser[field] = user[field];
      });
    }
    transformed.userId = transformedUser;

    return transformed;
  },
});

/**
 * Statics
 */
articleSchema.statics = {

  languages,

  /**
   * Get Article
   *
   * @param {ObjectId} id - The objectId of Article.
   * @returns {Promise<Article, APIError>}
   */
  async get(id) {
    let article;

    if (mongoose.Types.ObjectId.isValid(id)) {
      article = await this.findById(id).populate('userId').populate('imageId').exec();
    }

    if (article) {
      return article;
    }

    throw new APIError({
      message: 'Article does not exist',
      status: httpStatus.NOT_FOUND,
    });
  },

  /**
   * List articles in descending order of 'createdAt' timestamp.
   *
   * @param {number} skip - Number of articles to be skipped.
   * @param {number} limit - Limit number of articles to be returned.
   * @returns {Promise<Article[]>}
   */
  list({
    page = 1, perPage = 30,
  }) {
    return this.find({})
      .sort({ createdAt: -1 })
      .skip(perPage * (page - 1))
      .limit(perPage)
      .exec();
  },

  /**
   * List user's articles in descending order of 'createdAt' timestamp.
   *
   * @param {number} skip - Number of articles to be skipped.
   * @param {number} limit - Limit number of articles to be returned.
   * @param {ObjectId} userId - UserId of user who created resource
   * @returns {Promise<Article[]>}
   */
  userArticlesList({
    page = 1, perPage = 30, userId,
  }) {
    return this.find({ userId })
      .sort({ createdAt: -1 })
      .skip(perPage * (page - 1))
      .limit(perPage)
      .exec();
  },
};

/**
 * @typedef Article
 */
module.exports = mongoose.model('Article', articleSchema);
