@startuml Entity relations
' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity "User" as user {
  *_id : string <<generated>>
  --
  *email : text
  *password : text
  *firstName : text
  *lastName: text
  *role : enum
}

entity "Article" as article {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *title: text
  *text : text
}

entity "Image" as image {
  *_id : text <<generated>>
  --
  *name : text <<FK>>
  *buffer: text
}


entity "Comment" as comment {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *articleId: text <<FK>>
  *commentId: text <<FK>>
  *text: text
}

Entity "Comment vote" as vote {
  *_id : text <<generated>>
  --
  *userId : text <<FK>>
  *commentId: text <<FK>>
  *text
  *vote: {-1, 1}
}

user ||..o{ article
user ||..o{ comment
article ||..o{ comment
article ||..o| image
comment ||..o{ vote
comment ||..o{ comment
user ||..o{ vote

@enduml